<resources>
    <string name="app_name">P9A11y</string>
    <string name="cas_3_formulaire_de_connexion">Cas 3: Formulaire de connexion</string>
    <string name="cas_2_carte_de_suggestion_de_recettes">Cas 2 : Carte de suggestion de recettes</string>
    <string name="cas_1_bouton_d_ajout_au_panier">Cas 1 : Bouton d\'ajout au panier</string>
    <string name="cas_1">Cas 1 :</string>
    <string name="impossible_d_avoir_une_quantit_n_gative">Impossible d\'avoir une quantité négative</string>
    <string name="cas_2">Cas 2 :</string>
    <string name="cd_ajouter_aux_favoris">Favoris ajouter</string>
    <string name="ajouter">Ajouter</string>
    <string name="demo_cookie_text">Cookies au chocolat</string>
    <string name="recette_ajout_au_panier">Recette ajoutée au panier</string>
    <string name="cas_3">Cas 3 :</string>
    <string name="pseudo">Pseudonyme :</string>
    <string name="validate">Valider</string>
    <string name="demo_product_name">Nom du produit</string>

//added code

    // case 1
        <!-- String to announce the updated quantity -->
        <string name="quantity_updated">The quantity is now %1$d</string>

        <!-- Other strings for accessibility -->
        <string name="layout_description">Main layout for the case 1 activity</string>
        <string name="cas_1_description">Case 1 title</string>
        <string name="demo_product_name_description">Demo product name</string>
        <string name="remove_button_description">Remove item</string>
        <string name="quantity_text_description">Current quantity</string>
        <string name="add_button_description">Add item</string>
        <string name="quantity_layout_description">Layout containing product and quantity controls</string>


    //case 2

    <string name="cd_retirer_des_favoris">Favoris retirer</string>
    <string name="round_button_description">a rounded circle</string>
    <string name="add_product_to_basket">Add product to basket</string>
    <string name="add">Ajouter</string>

    //case 3

    <string name="invalid_input">Input invalid, pseudonyme should be at least 3 letters</string>
    <string name="invalid_input_suggestion">Assurez-vous que votre pseudonyme fait plus de 2 caractères. Essayez d"'"ajouter des chiffres ou des lettres supplémentaires.</string>
    <string name="favourite_button_description">Favourite icon</string>
    <string name="pseudo_input_description">Enter your username</string>
    <string name="validate_button_description">Validate your username</string>
    <string name="pseudo_hint">Enter pseudonyme here</string>




</resources>